--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "lint": "eslint .",
     "test-watch": "nodemon --exec 'npm test'",
     "start-watch": "nodemon server/server.js",
-    "start": "node server/server.js",
-    "snyk-protect": "snyk protect",
-    "prepare": "npm run snyk-protect"
+    "start": "node server/server.js"
   },
   "engines": {
     "node": "8.14"
@@ -19,10 +17,10 @@
   "author": "moser-ss",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "moment": "^2.24.0",
-    "socket.io": "^2.2.0",
-    "snyk": "^1.221.1"
+    "express": "4.17.1",
+    "moment": "2.24.0",
+    "socket.io": "2.2.0",
+    "snyk": "1.336.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
